# claims-model-starter

./: .env.example  .gitignore  404.html  BACKLOG.md  CHANGELOG.md  CLAUDE.md  OPERATIONS.md  README.md  ROADMAP.md  SESSION_NOTES.md  SESSION_RUNNER.md  TROUBLESHOOTING.md  index.html  initial_purpose.txt  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  publish-tutorial.yml
docs/: index.md  tutorial.md
docs/architecture-history/: architecture-approaches.md  architecture-plan.md  github-gitlab-abstraction-plan.md  initial_purpose.txt  pilot-readiness-audit.md
docs/methodology/: PROJECT_CONVENTIONS.md
docs/methodology/workstreams/: AUDIT_WORKSTREAM.md  TEMPLATE_WORKSTREAM.md
docs/planning/: architecture-approaches.md  architecture-plan.md  data-source-inventory-contract-plan.md  evolution-page-plan.md  github-gitlab-abstraction-plan.md  pilot-readiness-audit.md  resume-from-checkpoint-plan.md  scope-b-plan.md  tutorial-renderer-migration-plan.md
docs/style/: statistical_terms.md
docs/wiki/claims-model-starter/: Agent-Reference.md  Architecture-Decisions.md  Changelog.md  Content-Recommendations.md  Contributing.md  Data-Guide.md  Development-Workflow.md  Evolution.md  Extending-the-Pipeline.md  Getting-Started.md  (+12 more)
scripts/: publish_wiki.sh  render_tutorial.sh  run_pipeline.py
search/: search_index.json
src/model_project_constructor/: __init__.py
tests/: test_data_agent_decoupling.py
tests/data_agent_package/: test_anthropic_client.py  test_cli.py  test_discovery.py  test_inventory_schemas.py
tests/fixtures/: _b2_failmode.yaml  fraud_triage.yaml  intake_question_cap.yaml  intake_revision_cap.yaml  pricing_optimization.yaml  sample_curated_inventory.json  sample_datareport.json  sample_request.json  subrogation.yaml  subrogation_b2.yaml  subrogation_intake.json  tier1_intake.json  tier2_intake.json
tests/orchestrator/: test_adapters.py  test_checkpoints.py  test_config.py  test_logging.py  test_metrics.py  test_pipeline.py
tests/schemas/: fixtures.py  test_data.py  test_envelope_and_registry.py  test_gitlab.py  test_intake.py  test_repo.py
tests/scripts/: test_run_pipeline_adapter.py  test_run_pipeline_resume.py
tutorial/: index.html
(+77 files in other folders)
