[project]
name = "model-project-constructor"
version = "0.1.0"
description = "Multi-agent pipeline that turns a business model idea into a governance-scaffolded GitLab project (intake → data → website)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "R. Mark Sharp" },
]
dependencies = [
    "pydantic>=2.6,<3",
    "pyyaml>=6",
    "model-project-constructor-data-agent",
]

[project.optional-dependencies]
agents = [
    "langgraph>=0.2,<0.3",
    "anthropic>=0.40",
    "sqlparse>=0.5",
    "sqlalchemy>=2.0,<3",
    "python-gitlab>=4",
    "typer>=0.12",
]
ui = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "sse-starlette>=2",
    "langgraph-checkpoint-sqlite>=2.0,<3",
    "python-multipart>=0.0.9",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.scripts]
model-intake-agent = "model_project_constructor.agents.intake.cli:app"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
model-project-constructor-data-agent = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/model_project_constructor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "packages/data-agent/src"]
addopts = "-ra --cov=model_project_constructor --cov=model_project_constructor_data_agent --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = [
    "src/model_project_constructor",
    "packages/data-agent/src/model_project_constructor_data_agent",
]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["model_project_constructor", "model_project_constructor_data_agent"]
mypy_path = ["src", "packages/data-agent/src"]
